--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -16,12 +16,24 @@
                             <% if user.id == current_user.id %>
                                 <tr class="curgroup">
                                     <td><%= user.full_name %></td>
-                                    <td><%= @scores[user.id] %></td>
+                                    <% if @scores[user.id]==nil %>
+                                        <td>Has done nothing</td>
+                                    <% elsif @scores[user.id]==0%>
+                                        <td>Has done nothing</td>
+                                    <% else %>
+                                        <td><%= @scores[user.id] %></td>
+                                    <% end %>
                                 </tr>
                             <% else %>
                                 <tr>
                                     <td><%= user.full_name %></td>
-                                    <td><%= @scores[user.id] %></td>
+                                    <% if @scores[user.id]==nil %>
+                                        <td>Has done nothing</td>
+                                    <% elsif @scores[user.id]==0%>
+                                        <td>Has done nothing</td>
+                                    <% else %>
+                                        <td><%= @scores[user.id] %></td>
+                                    <% end %>
                                 </tr>
                             <% end %>
                         <% end %>
