--- a/app/assets/stylesheets/activity.scss
+++ b/app/assets/stylesheets/activity.scss
@@ -29,3 +29,7 @@ table, th, td {
     border: solid 5px transparent;
     border-left-color: #88bbdd;
 }
+
+.useract {
+    background-color: lightblue;
+}
