Fixed some entry fields.

--- a/app/assets/stylesheets/activity_type.scss
+++ b/app/assets/stylesheets/activity_type.scss
@@ -17,7 +17,11 @@ p{
 
 
 #activitytypes_name, #activitytypes_score{
-    text-align: center;
+    padding: 3px;
     font-size: large;
     
+}
+
+.form, .submitbutton{
+    text-align: center;
 }
