Fixed issues Kurdia pointed out.

--- a/app/views/activity/new.html.erb
+++ b/app/views/activity/new.html.erb
@@ -23,7 +23,7 @@
                     <br>
                     <br>
                     <div class="activity_feature">
-                        <p><label for = "activity_user">Activity will be recorder under the name of <%= current_user.first_name %> <%= current_user.last_name %></label></p>
+                        <p><label for = "activity_user">Activity will be recorded under the name of <%= current_user.first_name %> <%= current_user.last_name %></label></p>
                         <%= hidden_field :activities, :userid, :value => current_user.id %>
                     </div>
                     <br>
