--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,8 @@
  *= require_self
  */
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 header {
@@ -45,7 +45,7 @@ select {
 .container{
     width:100%;
     height: 100px;
-    display;flex;
+    display: flex;
 }
 
 
@@ -90,8 +90,8 @@ select {
 }
 
 #headercontainer {
-    display: flex;
     overflow: hidden;
+    display: flex;
 }
 
 .title {
