--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -2,10 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
 .groupcontainer {
     padding: 25px;
 }
 
 .curgroup {
-    background-color: lightblue;
+   background-color: lightblue;
+   /*background-color: #FF0000;*/
 }
+
+/* This is the deletebutton color*/
+/*.delitem {
+    color: #00FF00 !important;
+}*/
+
