adding the website icon code and png without error this time

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<%= favicon_link_tag asset_path('couplerun.png'), :rel => 'icon', :type =>  'image/png' %>
 <head>
   <title>Doing Together</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
