Reverting changes made else where that were commited by mistake.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,14 @@
  *
  *= require_tree .
  *= require_self
+ 
+ 
+  ADDING COMMIT HERE TO MAKE FOR COMMIT CAUSE ERRORS WERE COMMITED ELSEWHERE
+ 
+ 
  */
+ 
+ 
 * {
     margin: 0;
     padding: 0;
