--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,24 @@
   <header>
     <center><H2><%= link_to 'Doing Together', '/activity/index', :class => 'title'%></H2></center>
     <div id="headercontainer">
+        
         <div class="headerchild"><H4 class="lalign">A place to do things <i>together</i>.</H2></div>
         <% if user_signed_in? %>
           <div class="headerchild"><H4 class="ralign">
-            <%= link_to('Sign Out', destroy_user_session_path, method: :delete) %>        
+             <!-- Creates the out button:Added by Jake -->
+            <%= link_to(image_tag('button_sign_out.png'), destroy_user_session_path, method: :delete) %>        
           </H4></div>
         <% else %>
           <div class="headerchild"><H4 class="ralign">
-            <%= link_to('Sign In', new_user_session_path) %> or <%= link_to('Sign Up', new_user_registration_path) %>
+            <!-- Creates the Sign In and Sign Up buttons:Added by Jake -->
+            <%= link_to(image_tag('button_sign_in.png'), new_user_session_path) %> or <%= link_to(image_tag('button_sign_up.png'), new_user_registration_path) %>
           </H4></div>
         <% end %>
     </div>
   </header>
+  <!-- This adds the fgroup png:Added by Jake -->
+  <center><h1><%= image_tag "fgroup.png" %></h1></center>
+  <!-- This adds the fgroup png:Added by Jake -->
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 <%= yield %>
