Added data verification for important fields, and standardized inputs in forms.

--- a/app/views/activity_type/edit.html.erb
+++ b/app/views/activity_type/edit.html.erb
@@ -13,8 +13,8 @@
             <% end %>
             <br>
             <%= form_for @actType, :url => {:action => 'update', :id => @actType.id} do |a| %>
-                <p>Activity Type Name: <%= a.text_field 'name', :value => @actType.name %></p>
-                <p>Activity Type Score: <%= a.number_field 'score', :value => @actType.score, :step => 'any' %></p>
+                <p>Activity Type Name: <%= a.text_field 'name', :value => @actType.name, :maxlength => 50, :minlength => 5, :required => true %></p>
+                <p>Activity Type Score: <%= a.number_field 'score', :value => @actType.score, :step => 'any', :required => true %></p>
                 <%= a.submit "Save Changes", :class => 'submitbutton' %>
             <% end %>
             <br>
