--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,17 +5,17 @@
   
     <div class="field">
       <%= f.label :first_name %><br />
-      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", :size => 50 %>
     </div>
     
     <div class="field">
       <%= f.label :last_name %><br />
-      <%= f.text_field :last_name, autocomplete: "last_name" %>
+      <%= f.text_field :last_name, autocomplete: "last_name", :size => 50 %>
     </div>
   
     <div class="field">
       <%= f.label :email %><br />
-      <%= f.email_field :email, autocomplete: "email" %>
+      <%= f.email_field :email, autocomplete: "email", :size => 50 %>
     </div>
   
     <div class="field">
@@ -23,12 +23,12 @@
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
+      <%= f.password_field :password, autocomplete: "new-password", :size => 50 %>
     </div>
   
     <div class="field">
       <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", :size => 50 %>
     </div>
     <br>
     <div class="actions">
