--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -40,9 +40,9 @@
             </table>
             <br>
             <%= form_for @group, :url => {:action => 'update', :id => @group.id} do |g| %>
-                <p>Group Name: <%= g.text_field 'name', :value => @group.name, :autofocus => true  %></p>
-                <p>Group Description: <%= g.text_field 'description', :value => @group.description %></p>
-                <p>Group Password (Leave blank if you do not wish to change): <%= g.password_field 'password'%></p>
+                <p>Group Name: <%= g.text_field 'name', :value => @group.name, :autofocus => true, :maxlength => @maximumNameLength, :minlength => @minimumNameLength, :size => 50, :required => true %></p>
+                <p>Group Description: <%= g.text_field 'description', :value => @group.description, :maxlength => @maximumDescriptionLength, :minlength => @minimumDescriptionLength, :size => 50, :required => true %></p>
+                <p>Group Password (Leave blank if you do not wish to change): <%= g.password_field 'password', :size => 50%></p>
                 <br>
                 <%= g.submit "Save Changes", :class => 'submitbutton' %>
             <% end %>
