--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to (image_tag('button_log_in.png')), new_session_path(resource_name) %><br />
 <% end -%>
-
+  <!-- Creates the Sign Up Button under log in:Added by Jake -->
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br /><br />
+  <%= link_to (image_tag('button_sign_in_small.png')), new_registration_path(resource_name) %><br /><br />
 <% end -%>
-
+  <!-- Creates the forgotten password Button under log in:Added by Jake -->
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br /><br />
+  <%= link_to (image_tag('button_forgot_pw.png')), new_password_path(resource_name) %><br /><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
