Added rendered links so links look the same accross the site

--- a/app/assets/stylesheets/activity_type.scss
+++ b/app/assets/stylesheets/activity_type.scss
@@ -13,6 +13,12 @@ p{
 
 .activitytypecontainer {
     padding: 25px;
+    align: center;
+    margin: auto;
+}
+.activitytypetable {
+    align: center;
+    margin: auto;
 }
 
 
