--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -7,8 +7,15 @@
 .groupcontainer {
     padding: 20px;
     text-align: center;
+    align: center;
+    margin: auto;
 }
 
 .curgroup {
 
+}
+
+.grouptable {
+    align: center;
+    margin: auto;
 }
