Added rendered links so links look the same accross the site

--- a/app/assets/stylesheets/activity.scss
+++ b/app/assets/stylesheets/activity.scss
@@ -8,6 +8,8 @@ table, th, td {
 
 .activitycontainer {
     padding: 25px;
+    margin: auto;
+    align: center;
 }
 
 .delitem {
@@ -16,6 +18,8 @@ table, th, td {
 .activitytable {
     border: 1px solid black;
     color: #012999;
+    margin: auto;
+    align: center;
 }
 .emptyerror {
     color: red !important;
