--- a/app/assets/stylesheets/activity.scss
+++ b/app/assets/stylesheets/activity.scss
@@ -37,3 +37,61 @@ table, th, td {
 .useract {
     background-color: lightblue;
 }
+
+table.activitytable {
+  border: 1px solid #1C6EA4;
+  background-color: #AED6F1;
+  width: auto;
+  text-align: left;
+  border-collapse: collapse;
+}
+table.activitytable td, table.activitytable th {
+  border: 1px solid #AAAAAA;
+  padding: 3px 2px;
+}
+table.activitytable tbody td {
+  font-size: 13px;
+}
+table.activitytable tr:nth-child(even) {
+  background: #D0E4F5;
+}
+table.activitytable thead {
+  background: #1C6EA4;
+  background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+  background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+  background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+  border-bottom: 2px solid #444444;
+}
+table.activitytable thead th {
+  font-size: 15px;
+  font-weight: bold;
+  color: #FFFFFF;
+  border-left: 2px solid #D0E4F5;
+}
+table.activitytable thead th:first-child {
+  border-left: none;
+}
+
+table.activitytable tfoot {
+  font-size: 14px;
+  font-weight: bold;
+  color: #FFFFFF;
+  background: #D0E4F5;
+  background: -moz-linear-gradient(top, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
+  background: -webkit-linear-gradient(top, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
+  background: linear-gradient(to bottom, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
+  border-top: 2px solid #444444;
+}
+table.activitytable tfoot td {
+  font-size: 14px;
+}
+table.activitytable tfoot .links {
+  text-align: right;
+}
+table.activitytable tfoot .links a{
+  display: inline-block;
+  background: #1C6EA4;
+  color: #FFFFFF;
+  padding: 2px 8px;
+  border-radius: 5px;
+}
