--- a/app/views/activity/new.html.erb
+++ b/app/views/activity/new.html.erb
@@ -29,11 +29,11 @@
                     <br>
                 </div>
                 <div class="buttonpanel">
-                    <%= submit_tag 'Log Data', :class => 'submitbutton' %>
+                    <%= image_submit_tag "button_log_data.png", :class => 'submitbutton' %>
                 </div>
             <% end%>
         </div>
         <br>
-        <p class="link"><%= link_to 'Back', url_for(:back), :class => 'backitem'%></p>
+        <p class="link"><%= link_to (image_tag('button_back.png')), url_for(:back), :class => 'backitem'%></p>
     </div>
 </div>
