--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -25,7 +25,7 @@
                                         <td><%= link_to group.name, {:action => 'edit', :id => group.id} %></td>
                                         <td><%= group.description %></td>
                                         <td>
-                                            <%= link_to "Delete", 
+                                            <%= link_to (image_tag('button_delete.png')), 
                                                 {:action => 'delete', :id => group.id,}, :method => 'delete',
                                                 data: {:confirm => "Are you sure you want to delete #{group.name}?"},
                                                 :class => 'delitem' %>
@@ -44,7 +44,7 @@
                                     <td><%= group.id %></td>
                                     <td><%= link_to group.name, {:action => 'show', :id => group.id} %></td>
                                     <td><%= group.description %></td>
-                                    <td><%= link_to "Join", {:action => 'show', :id => group.id} %></td>
+                                    <td><%= link_to (image_tag('button_join.png')), {:action => 'show', :id => group.id} %></td>
                                 </tr>
                             <%end%>
                         <% end %>
