--- a/app/views/group/new.html.erb
+++ b/app/views/group/new.html.erb
@@ -19,10 +19,11 @@
                 <%= password_field 'group', 'password', :size =>  @smallerMaximumLength %>
             </div>
             <br>
-            <%= submit_tag 'Create New Group', :class => 'submitbutton'%>
+            <%= image_submit_tag "button_create.png", :class => 'submitbutton'%>
             <% end %>
             <br>
-            <p class="link"><%= link_to 'Back', url_for(:back), :class => 'backitem'%></p>
+            <!-- Added a back button png: Jake -->
+            <p class="link"><%= link_to (image_tag('button_back.png')), url_for(:back), :class => 'backitem'%></p>
         </div>
     </div>
 </div>
