Added a few missing buttons, please let me know if i missed any others

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
     </div>
     <br>
     <div class="actions">
-      <%= f.submit "Sign up" %>
+      <%= image_submit_tag "button_sign_up.png" %>
     </div>
   <% end %>
   <br>
