--- a/app/views/activity/show.html.erb
+++ b/app/views/activity/show.html.erb
@@ -22,7 +22,7 @@
                 </p>
                 <br>
             <% end %>
-            <p class="link"><%= link_to 'Back', url_for(:back), :class => 'backitem'%></p>
+            <p class="link"><%= link_to (image_tag('button_back.png')), url_for(:back), :class => 'backitem'%></p>
         </div>
     </div>
 </div>
