--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -19,14 +19,15 @@
             <br>
             <%= render "shared/links" %>
         <% else %>
-            <table class="activitytable">
+            <table id="activitytable" class="activitytable">
                 <thead>
                     <tr>
-                        <th><p class="link"><%= link_to "Activity Type", {:action => 'index', :controller => 'activity_type'}%></p></th>
-                        <th>Duration (minutes)</th>
-                        <th>Person Who Done It</th>
-                        <th>Entry Time</th>
-                        <th>Entry Date</th>
+                        <!--<th><p class="link"><%= link_to "Activity Type", {:action => 'index', :controller => 'activity_type'}%></p></th> -->
+                        <th><p class="link"><a class="UP" onclick="sortTableByColumn(0,true)" href="javascript:void(0);">Activity Type</a></p></th>
+                        <th><p class="link"><a class="UP" onclick="sortTableByColumn(1)" href=javascript:void(0);>Duration (Minutes)</a></p></th>
+                        <th><p class="link"><a class="UP" onclick="sortTableByColumn(2)" href=javascript:void(0);>Person Who Done It</a></p></th>
+                        <th><p class="link"><a class="UP" onclick="sortTableByTime()" href=javascript:void(0);>Entry Time</a></p></th>
+                        <th><p class="link"><a onclick="sortTableByTime()" href=javascript:void(0);>Entry Date</a></p></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -39,7 +40,10 @@
                             <td><p class="name"><%= link_to @actTypes.find(act.actid).name, {:action => 'show', :id => act.id} %></p></td>
                             <td><p class="duration"><%= act.duration %></p></td>
                             <td><p class="user"><%= @users[act.userid] %></p></td>
-                            <td><p class="timestamp"><%= act.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M") %></p></td>
+                            <td><%= content_tag :p, :id => act.created_at, :class => "timestamp" do %> 
+                                    <%= act.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M") %> 
+                                <% end %>
+                            </p></td>
                             <td><p class="timestamp"><%= act.created_at.in_time_zone("Central Time (US & Canada)").strftime("%a, %m/%d/%y") %></p></td>
                         </tr>
                     <% end %>
