Activity table searchable by activity type

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -19,6 +19,9 @@
             <br>
             <%= render "shared/links" %>
         <% else %>
+            <center>
+                <input type="text" id="activitySearchInput" class="searchBar" onkeyup="search()" placeholder="Search for an entry..." title="Search here">
+            </center>
             <table id="activitytable" class="activitytable">
                 <thead>
                     <tr>
