Activity Table is now searchable!

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,7 +66,7 @@ select {
 
 .activitypanel{
     width: 50%;
-    heght: 200px;
+    height: 200px;
     margin-left:auto;
     margin-right: auto;
 }
