--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -21,6 +21,11 @@
         <% else %>
             <center>
                 <input type="text" id="activitySearchInput" class="searchBar" onkeyup="search()" placeholder="Search for an entry..." title="Search here">
+                <select id='activitySearchSelect' class='selectBar' onchange="search()">
+                    <option>Activity Type</option>
+                    <option>Duration</option>
+                    <option>Person Who Done It</option>
+                </select>
             </center>
             <table id="activitytable" class="activitytable">
                 <thead>
