--- a/app/views/group/new.html.erb
+++ b/app/views/group/new.html.erb
@@ -1,29 +1,35 @@
-<div class="group_controller">
+<div class='group_controller'>
     <H1 class='pagetitle'>Create a New Group</H1>
     <br>
-    <div class="container">
+    <div class='container'>
         <div class='groupcontainer'>
             <%= form_tag :action => 'create' do %>
-            <div class="groupelement">
-                <p><label for = "group_name">Enter Group Name: </label></p>
+            <div class='groupelement'>
+                <p><label for = 'group_name'>Enter Group Name: </label></p>
                 <em>(Must be between <%= @minimumNameLength %> and <%= @maximumNameLength %> characters)</em><br>
-                <%= text_field 'group', 'name', :maxlength => @maximumNameLength, :minlength => @minimumNameLength, :size => 50, :required => true %>
+                <%= text_field 'group', 'name', :maxlength => @maximumNameLength, :minlength => @minimumNameLength, :size => 50, :onkeyup => 'verifyNewGroup()', :required => true %>
             </div>
-            <div class="groupelement">
-                <p><label for = "group_description">Enter Group Description: </label></p>
+            <div class='groupelement'>
+                <p id='groupDescriptionAlert' class='AlertMessage'>Group description cannot be the same as the group name.</p>
+                <p><label for = 'group_description'>Enter Group Description: </label></p>
                 <em>(Must be between <%= @minimumDescriptionLength %> and <%= @maximumDescriptionLength %> characters)</em><br>
-                <%= text_field 'group', 'description', :maxlength => @maximumDescriptionLength, :minlength => @minimumDescriptionLength, :size => 50, :required => true %>
+                <%= text_field 'group', 'description', :maxlength => @maximumDescriptionLength, :minlength => @minimumDescriptionLength, :size => 50, :onkeyup => 'verifyNewGroup()', :required => true %>
             </div>
-            <div class="groupelement">
-                <p><label for = "group_description">Enter Group Password</label></p>
-                <%= password_field 'group', 'password', :size =>  @smallerMaximumLength %>
+            <div class='groupelement'>
+                <p><label for = 'group_password'>Enter Group Password</label></p>
+                <%= password_field 'group', 'password', :size =>  @smallerMaximumLength, :onkeyup => 'verifyNewGroup()', :required => true%>
+            </div>
+            <div class='groupelement'>
+                <p id='groupPasswordAlert' class='AlertMessage'>Passwords do not match</p>
+                <p><label for = 'group_password'>Confirm Password</label></p>
+                <%= password_field 'group', 'password_confirmation', :size => @smallerMaximumLength, :onkeyup => 'verifyNewGroup()', :required => true%>
             </div>
             <br>
-            <%= image_submit_tag "button_create.png", :class => 'submitbutton'%>
+            <%= image_submit_tag 'button_create.png', :class => 'submitbutton', :id => 'group_submit_button', :disabled => 'true'%>
             <% end %>
             <br>
             <!-- Added a back button png: Jake -->
-            <p class="link"><%= link_to (image_tag('button_back.png')), url_for(:back), :class => 'backitem'%></p>
+            <p class='link'><%= link_to (image_tag('button_back.png')), url_for(:back), :class => 'backitem'%></p>
         </div>
     </div>
 </div>
